fix: cards size and overflow

--- a/styles.css
+++ b/styles.css
@@ -263,30 +263,33 @@ body {
 .cards_container {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 1.5rem;
 }
 
 .project_card {
-  display: flex;
-  flex-direction: column;
+  display: grid;
   background-color: #11183d;
-  margin: 0 auto;
   width: 80%;
-  max-width: 100%;
+  max-height: 500px;
+  overflow: hidden; /* Añade esto */
 }
 
 .project_thumbnail_container {
   position: relative;
+  overflow: hidden;
 }
 
 .project_data {
-  padding: 0px 0.5rem 1rem 0.5rem;
+  padding: 0.5rem;
+  overflow: auto;
 }
 
 .project_thumbnail {
-  object-fit: cover;
-  max-width: 100%;
-  max-height: 100%;
+  object-fit: fill;
+  object-position: center center;
+  width: 100%;
+  height: 100%;
 }
 
 .project_description {
@@ -294,7 +297,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: calc(100% - 0.38rem);
+  height: 100%;
   padding: 1rem;
   background-color: rgba(2, 0, 15, 0.95);
   overflow: scroll;
@@ -455,14 +458,20 @@ body {
 
 /* ? ============ BREAKPOINTS ============ */
 @media screen and (max-width: 280px){
-  :root{
-    font-size: 1vh;
+  body, html{
+    overflow: hidden;
   }
 }
 
 @media screen and (max-width: 420px) {
   .data_header {
     flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 600px){
+  .project_card{
+    width: 100%;
   }
 }
 
